# antidetect-playwright

./: .env.example  .gitignore  Dockerfile  README.md  antidetect-browser.spec  docker-compose.yml  pyproject.toml  requirements-build.txt  requirements.txt  setup.bat  setup.sh
.config/: app.toml  deploy.toml  logging.toml  runtime.toml
assets/icons/: README.md  preview.html
src/antidetect_playwright/: __init__.py  __main__.py  config.py  logging.py
src/antidetect_playwright/application/: __init__.py  batch_executor.py  result_handler.py  session_manager.py  task_runner.py
src/antidetect_playwright/domain/: __init__.py
src/antidetect_playwright/domain/interfaces/: __init__.py  browser_pool.py  fingerprint_generator.py  profile_storage.py  proxy_manager.py  task_queue.py
src/antidetect_playwright/domain/models/: __init__.py  browser_profile.py  fingerprint.py  proxy.py  task.py
src/antidetect_playwright/fingerprint/: __init__.py  generator.py  presets.py
src/antidetect_playwright/gui/: __init__.py  __main__.py  app.py  dialogs.py  dialogs_popup.py  geoip.py  icons.py  launcher.py  modal.py  models.py  popup.py  proxy_utils.py  security.py  storage.py  styles.py  table_models.py  theme.py  widgets.py
src/antidetect_playwright/gui/components/: __init__.py  combobox_utils.py  floating_toolbar.py  inline_alert.py  mini_sidebar.py  selectable_table.py
src/antidetect_playwright/gui/pages/: __init__.py  profiles.py  proxy.py  tags.py  trash.py
src/antidetect_playwright/infrastructure/: __init__.py  browser.py  fingerprint.py  profile_storage.py  proxy.py  redis_client.py  task_queue.py
src/antidetect_playwright/infrastructure/stealth/: __init__.py  human_behavior.py
src/antidetect_playwright/integrations/: __init__.py  telegram_bot.py
src/antidetect_playwright/resources/chrome/chrome/: custom.css
src/antidetect_playwright/utils/: __init__.py  data_generator.py
