[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antidetect-playwright"
version = "0.1.0"
description = "Stealth browser automation with anti-detection capabilities"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Antidetect Team" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
keywords = ["playwright", "automation", "antidetect", "stealth", "browser"]

dependencies = [
    "camoufox[geoip]>=0.4.11",
    "playwright>=1.48.0",
    "redis>=5.2.0",
    "aiohttp>=3.10.0",
    "aiohttp-socks>=0.9.0",
    "click>=8.1.0",
    "cryptography>=43.0.0",
    "orjson>=3.10.0",
    "browserforge>=1.2.1",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.8.0",
    "PyQt6-Qt6>=6.8.0",
    "qasync>=0.28.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]
package = [
    "PyInstaller>=6.11.0",
    "pillow>=11.0.0",
    "cairosvg>=2.7.0",
]
all = ["antidetect-playwright[gui,dev]"]

[project.scripts]
antidetect-playwright = "antidetect_playwright.__main__:main"
antidetect-browser = "antidetect_playwright.gui.app:main"

[project.urls]
Homepage = "https://github.com/antidetect/antidetect-playwright"
Repository = "https://github.com/antidetect/antidetect-playwright"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
antidetect_playwright = ["py.typed", "resources/chrome/**/*"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["antidetect_playwright"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/antidetect_playwright"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
